--- a/action.yml
+++ b/action.yml
@@ -74,6 +74,10 @@ inputs:
     description: >-
       Directory that contains actions-runner software and scripts. E.g. /home/runner/actions-runner.
     required: false
+  ec2-launch-template:
+     description: >-
+       EC2 launch template name. A launch template can be used to specify AMI, instance type etc parameters.
+     required: false
   github-registration-timeout:
     description: >-
       Minutes to wait for GitHub runner registration before failing the start.
