--- a/action.yml
+++ b/action.yml
@@ -70,10 +70,11 @@ inputs:
       for example: '[{"Key": "TagKey1", "Value": "TagValue1"}, {"Key": "TagKey2", "Value": "TagValue2"}]'
     required: false
     default: '[]'
-  runner-home-dir:
+  number-of-runners:
     description: >-
-      Directory that contains actions-runner software and scripts. E.g. /home/runner/actions-runner.
+      Number of GitHub runner processes started on the created instance.
     required: false
+    default: '1'
   ec2-launch-template:
      description: >-
        EC2 launch template name. A launch template can be used to specify AMI, instance type etc parameters.
