--- a/action.yml
+++ b/action.yml
@@ -52,12 +52,13 @@ inputs:
       The label is used to remove the runner from GitHub when the runner is not needed anymore.
       This input is required if you use the 'stop' mode.
     required: false
-  ec2-instance-id:
+  ec2-instance-ids:
     description: >-
-      EC2 Instance Id of the created runner.
-      The id is used to terminate the EC2 instance when the runner is not needed anymore.
+      EC2 Instance Id(s) of the created runner(s).
+      The id(s) are used to terminate the EC2 instance(s) when the runner is not needed anymore.
       This input is required if you use the 'stop' mode.
     required: false
+    default: 'null'
   iam-role-name:
     description: >-
       IAM Role Name to attach to the created EC2 instance.
@@ -73,6 +74,11 @@ inputs:
   number-of-runners:
     description: >-
       Number of GitHub runner processes started on the created instance.
+    required: false
+    default: '1'
+  number-of-instances:
+    description: >-
+      Number of EC2 instances to create.
     required: false
     default: '1'
   ec2-launch-template:
@@ -91,11 +97,10 @@ outputs:
       The label is used in two cases:
       - to use as the input of 'runs-on' property for the following jobs;
       - to remove the runner from GitHub when it is not needed anymore.
-  ec2-instance-id:
+  ec2-instance-ids:
     description: >-
-      EC2 Instance Id of the created runner.
+      EC2 Instance Id(s) of the created runner(s).
       The id is used to terminate the EC2 instance when the runner is not needed anymore.
 runs:
   using: node12
   main: ./dist/index.js
-  
